Fixed some bugs
background color footer was not showing, now it does

--- a/css/style.css
+++ b/css/style.css
@@ -154,8 +154,8 @@ it looks small. I followed the design file in this case.*/
 }
 
 footer {
-  height: 50px;
-  backround-color: #121212;
+  height: 150px;
+  background-color: #121212;
 }
 
 .footerlogo {
